fixed messages hiding behind chatbar

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -57,7 +57,7 @@ body {
 
 .messages {
   width: 80%;
-  margin-top: 60px;
+  margin: 60px 0;
 }
 
 .user-list-container {
